# Multi-Agent-Routing

./: .env  README.md  html_view.py  main.py  pyproject.toml  run_html_view.py  test_html_view.py  test_rf.py  verify_setup.py  web_interface.py
.ignore/: sim.py
.ignore/agents/: base_agent.py  flood_agent.py
.ignore/data/raw/marikina_barangay_shapefiles/: Barangka.shp  Barangka.shx  De La Pena.shp  Fortune.shp  Fortune.shx  Malanday.shp  Marikina Boundary.shx  Marikina Heights.shp  Marikina Heights.shx  Parang.shp  Parang.shx  San Roque.shp  San Roque.shx  Sta.  Elena.shx  Tumana.shp  Tumana.shx
.ignore/data/raw/marikina_boundary_shapefiles/: marikina_boundary_shapefile.dbf  marikina_boundary_shapefile.shp
config/: agent_config.py
data/: Mapping.qgz  data_structures.py  evacuation_centers.csv  evacuation_centers.geojson  evacuation_centers_marikina.gpkg  road_networks_marikina.gpkg
scripts/: quick_test.py  run_evaluation.py
src/: __init__.py  html_view.py  main.py  test.py
src/agents/: __init__.py  advanced_hazard_agent.py  base_agent.py  evacuation_manager_agent.py  flood_agent.py  hazard_agent.py  routing_agent.py  scout_agent.py
src/data/: __init__.py  data_structures.py  simulation_data.py
src/environment/: __init__.py  dynamic_graph.py
src/gis/: utils.py
src/helpers/: utils.py
src/routing/: engine.py
src/simulation/: mas_controller.py  scenarios.py
src/utils/: __init__.py  logging_config.py  performance_metrics.py
templates/: dashboard.html  visualization.html
tests/: test_agents.py  test_environment.py  test_simulation.py
(+18 files in other folders)
