[project]
name = "multi-agent-routing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextily>=1.6.2",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "osmnx>=2.0.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "simpy>=4.1.1",
]
