[project]
name = "multi-agent-routing"
version = "0.1.0"
description = "MAS-FRO: Multi-Agent System for Flood Route Optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextily>=1.6.2",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "osmnx>=2.0.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "simpy>=4.1.1",
    # Additional dependencies for full functionality
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "flask>=2.3.0",
    "plotly>=5.0.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
    # Optional ML dependencies
    "transformers>=4.21.0",
    "torch>=2.0.0",
    "folium>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
